force-app/main/default/objects/uNI_Logframe__c/uNI_Logframe__c.object-meta.xml
<CustomObject>
    <label>Logframe</label>
    <nameField>
        <label>Logframe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logframes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>