force-app/main/default/objects/uNI_Logframe__c/fields/uNI_Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>uNI_Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Logframes</relationshipLabel>
    <relationshipName>Logframes</relationshipName>
    <type>Lookup</type>
</CustomField>