force-app/main/default/objects/uNI_Logframe__c/fields/uNI_IsEditableLogframe__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsEditableLogframe__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isEditableLogframe</label>
    <type>Checkbox</type>
</CustomField>