force-app/main/default/objects/uNI_Logframe__c/fields/uNI_LogframeVersion__c.field-meta.xml
<CustomField>
    <fullName>uNI_LogframeVersion__c</fullName>
    <description>Version of the logframe</description>
    <label>Logframe Version</label>
    <length>155</length>
    <type>Text</type>
</CustomField>