force-app/main/default/objects/uNI_Logframe__c/fields/uNI_MilestonesSubmitted__c.field-meta.xml
<CustomField>
    <fullName>uNI_MilestonesSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestones Submitted</label>
    <type>Checkbox</type>
</CustomField>