force-app/main/default/objects/uNI_Logframe__c/fields/uNI_ProjectYears__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectYears__c</fullName>
    <label>Project Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>